corregir registro CEPAL

--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -191,6 +191,7 @@
   title = {Cohesión Social En Chile En Tiempos de Cambio: Indicadores, Perfiles y Factores Asociados},
   author = {Castillo, Juan-Carlos and Espinoza, Vicente and Barozet, Emmanuelle},
   year = {2022},
+  month = mar,
   address = {Santiago},
   institution = {CEPAL},
   url = {https://www.cepal.org/es/publicaciones/47735-cohesion-social-chile-tiempos-cambio-indicadores-perfiles-factores-asociados},
@@ -810,19 +811,6 @@
   file = {/home/juank/Dropbox/zoterojcydocs/storage/GJ8PIA8M/Guerra and Castillo - 2016 - Sintomatología en adolescentes victimizados sexual.pdf}
 }
 
-@phdthesis{hastie_cold_2005,
-  type = {Master Thesis  (First Advisor)},
-  title = {Cold Hearts versus Bleeding Hearts: Disciplinary Differences in University Students' Sociopolitical Orientations},
-  author = {Hastie, B.},
-  year = {2005},
-  address = {Murdoch},
-  url = {http://wwwlib.murdoch.edu.au/adt/browse/view/adt-MU20051214.170628},
-  abstract = {Este es el abstract},
-  school = {Murdoch University, PsychologyEditor},
-  keywords = {attribution},
-  annotation = {Doctoral Thesis Cold hearts versus bleeding hearts: Disciplinary differences in university students' sociopolitical orientations JC pdf (cap 3 attribution) printed (idem)}
-}
-
 @article{iturra_percepcion_2022,
   title = {Percepción de Desigualdad Económica y Su Influencia Sobre La Justificación de Las Diferencias de Ingreso Legítimas},
   author = {Iturra, Julio and Castillo, Juan-Carlos and Rufs, Catalina and Maldonado, Luis},
@@ -1110,8 +1098,10 @@
   title = {Enfermedades Crónicas No Transmisibles y El Potencial Efecto Protector de La Cohesión Social En Chile.},
   author = {Varas, Simon and Castillo, Juan-Carlos and Ferrer, Marcela},
   year = {2022},
-  journal = {Work in progress},
-  abstract = {Introducción: Dentro del mundo de investigación social en salud, el estudio de las enfermedades crónicas no transmisibles representa enormes desafíos. Existe un creciente campo de investigación que relaciona los procesos de salud y enfermedad con la cohesión social y el capital social, considerados como  un potencial factor protector de la salud. Material y métodos: Los datos utilizados corresponden a la Encuesta Calidad de Vida y Salud (ENCAVI) 2015 – 2016 (N=6.532). La cohesión social es examinada a partir de tres de sus componentes: satisfacción con los lazos sociales, identificación con el barrio y propensión a la colaboración en el barrio. Las enfermedades consideradas son principalmente Hipertensión y Diabetes. Además se incluyen algunas de las causantes de mayor mortalidad en Chile (Enfermedades cardio y cerebrovasculares, Cáncer, Enfermedades respiratorias crónicas, Enfermedades hepáticas y Enfermedades renales), las cuales fueron agrupadas en una escala. La técnica de análisis empleada es la de regresión logística binaria. Resultados: Los análisis basados en modelos de regresión logística señalan que la satisfacción con los lazos sociales es el principal elemento de la cohesión social consistentemente favorable y potencialmente protector en la presencia de ECNT (Hipertensión 95\% IC 0.786-0.940; diabetes 95\% IC 0.795-0.969; otras ECNT 95\% IC 0.724-0.879). En cambio, los elementos de identificación con el barrio y propensión a la colaboración en el barrio no demuestran un efecto consistente ni significativo. Discusión: La promoción y el fortalecimiento de los lazos sociales podría contribuir a prevenir la presencia de Diabetes, Hipertensión y otras ECNT. Implementar estrategias públicas para el desarrollo de la cohesión social podría contribuir a compensar la insuficiencia de recursos físicos para enfrentar el aumento en la carga de ECNT y combatir las desigualdades en salud.}
+  journal = {Trabajo en progreso},
+  abstract = {Introducción: Dentro del mundo de investigación social en salud, el estudio de las enfermedades crónicas no transmisibles representa enormes desafíos. Existe un creciente campo de investigación que relaciona los procesos de salud y enfermedad con la cohesión social y el capital social, considerados como  un potencial factor protector de la salud. Material y métodos: Los datos utilizados corresponden a la Encuesta Calidad de Vida y Salud (ENCAVI) 2015 – 2016 (N=6.532). La cohesión social es examinada a partir de tres de sus componentes: satisfacción con los lazos sociales, identificación con el barrio y propensión a la colaboración en el barrio. Las enfermedades consideradas son principalmente Hipertensión y Diabetes. Además se incluyen algunas de las causantes de mayor mortalidad en Chile (Enfermedades cardio y cerebrovasculares, Cáncer, Enfermedades respiratorias crónicas, Enfermedades hepáticas y Enfermedades renales), las cuales fueron agrupadas en una escala. La técnica de análisis empleada es la de regresión logística binaria. Resultados: Los análisis basados en modelos de regresión logística señalan que la satisfacción con los lazos sociales es el principal elemento de la cohesión social consistentemente favorable y potencialmente protector en la presencia de ECNT (Hipertensión 95\% IC 0.786-0.940; diabetes 95\% IC 0.795-0.969; otras ECNT 95\% IC 0.724-0.879). En cambio, los elementos de identificación con el barrio y propensión a la colaboración en el barrio no demuestran un efecto consistente ni significativo. Discusión: La promoción y el fortalecimiento de los lazos sociales podría contribuir a prevenir la presencia de Diabetes, Hipertensión y otras ECNT. Implementar estrategias públicas para el desarrollo de la cohesión social podría contribuir a compensar la insuficiencia de recursos físicos para enfrentar el aumento en la carga de ECNT y combatir las desigualdades en salud.},
+  copyright = {add rights},
+  lccn = {add call number}
 }
 
 @article{zmerli_income_2015,
