--- a/content/publication/academic-presentations.bib
+++ b/content/publication/academic-presentations.bib
@@ -9,18 +9,6 @@
   keywords = {legitimacy ideology Chile}
 }
 
-@misc{castillo_cohesion_2022a,
-  type = {Presentación Seminario CEPAL-COES},
-  title = {Cohesión Social En Chile En Tiempos de Cambio: Indicadores, Perfiles y Factores Asociados},
-  author = {Castillo, Juan-Carlos},
-  year = {2022},
-  month = mar,
-  address = {Santiago  (Online)},
-  url = {https://ocscoes.github.io/presentaciones/CEPAL2022cohesionELSOC.html},
-  abstract = {![](/images/cepal-coes-2022.png) El interés por el estudio de la cohesión social posee una larga trayectoria tanto académica como así también desde el estado y de organizaciones con interés público. La cohesión social aparece como una aspiración normativa de una sociedad mejor, vinculada a conceptos como lazos sociales de calidad, pertenencia, y confianza en los demás y en el estado. Se asume también que un estado de adecuada cohesión social es producto de condiciones estructurales y políticas que apunten a mayor igualdad, integración y oportunidades, por lo cual muchas veces se refiere a ella como un horizonte o una consecuencia de buenas políticas sociales. Sin duda este horizonte normativo reaparece con fuerza en tiempos caracterizados por crisis económica producto de la pandemia, polarización política, y la extrema concentración de ingreso y privilegios que caracteriza las sociedades actuales y donde el caso Chileno claramente no es una excepción. El renovado interés por la cohesión social nos lleva necesariamente a volver sobre su definición, sus alcances y su medición. Si bien existen muchas diferencias en las aproximaciones y definiciones en este tema, en los últimos años surge una convergencia hacia el carácter multidimensional de la cohesión social, que incorpora elementos como relaciones sociales de igualdad, sentido de pertenencia y orientación hacia el bien común. Partiendo desde una definición de cohesión social de la CEPAL (2021), este reporte de investigación presenta inicialmente una propuesta de indicadores de cohesión social basada en la Encuesta Longitudinal Social de Chile - ELSOC 2016-2020, producida por COES. El carácter longitudinal-panel de esta encuesta nos permite realizar posteriormente un análisis de los cambios ocurridos en nueve indicadores de cohesión social en Chile entre los años 2016 y 2020. Finalmente, se presenta una propuesta de tres perfiles de cohesión social en la sociedad chilena así como también su caracterización socioeconómica y regional.},
-  annotation = {\#\# Video de la presentación {$<$}br{$>$} {$<$}iframe width="700"  height="450" src="https://www.youtube.com/embed/CgfAkQ5RWxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$} {$<$}br{$>$} [Documento](https://www.cepal.org/es/publicaciones/47735-cohesion-social-chile-tiempos-cambio-indicadores-perfiles-factores-asociados) {$<$}br{$>$} [Github Repo](https://github.com/ocscoes/cohesion-cepal) {$<$}br{$>$} [Bookdown](https://cohesion-cepal.netlify.app/)}
-}
-
 @misc{castillo_concepts_2021,
   type = {3rd Akademie Für Soziologie (AS) Conference: Cohesive Societies? Analytical-Empirical Perspectives},
   title = {Concepts and Measurement of Social Cohesion in International Perspective},
@@ -75,17 +63,6 @@ JC printed pdf}
   year = {April, 27-28, 2007},
   address = {Budapest, Social Sciences Faculty, Eötvös Loránd University},
   keywords = {legitimacy ideology Chile}
-}
-
-@misc{castillo_herramientas_2022,
-  type = {Presentación En El Seminario: Ciencia Abierta, ¿es Ciencia Accesible?},
-  title = {Herramientas Para La Apertura Del Flujo de Investigación Científica},
-  author = {Castillo, Juan-Carlos},
-  year = {2022},
-  month = jun,
-  address = {Universidad Iberoamericana de México  (Online)},
-  url = {https://lisa-coes.github.io/presentaciones/Ibero-MEX-Jun2022/iberomex2022.html},
-  annotation = {[Github Repo](https://github.com/lisa-coes/presentaciones)}
 }
 
 @inproceedings{castillo_inequality_2010a,
@@ -173,6 +150,17 @@ JC printed pdf}
   annotation = {[Github Repo](https://github.com/ocscoes/presentaciones)}
 }
 
+@misc{castillo_measurement_2022a,
+  type = {Presentación En El Seminario: Ciencia Abierta, ¿es Ciencia Accesible?},
+  title = {Herramientas Para La Apertura Del Flujo de Investigación Científica},
+  author = {Castillo, Juan-Carlos},
+  year = {2022},
+  month = jun,
+  address = {Universidad Iberoamericana de México  (Online)},
+  url = {https://lisa-coes.github.io/presentaciones/Ibero-MEX-Jun2022/iberomex2022.html},
+  annotation = {[Github Repo](https://github.com/lisa-coes/presentaciones)}
+}
+
 @misc{castillo_perception_2008a,
   title = {Perception and Legitimacy of Income Inequality in International Comparison},
   author = {Castillo, JC and Gerlitz, J. and Schrenker, M.},
@@ -189,6 +177,18 @@ JC printed pdf}
   address = {Potsdam, Potsdam University},
   keywords = {legitimacy ideology Chile},
   note = {pdf printed}
+}
+
+@misc{castillo_presentacion_2022,
+  type = {Presentación Seminario CEPAL-COES},
+  title = {Presentación Cohesión Social En Chile En Tiempos de Cambio: Indicadores, Perfiles y Factores Asociados},
+  author = {Castillo, Juan-Carlos},
+  year = {2022},
+  month = mar,
+  address = {Santiago  (Online)},
+  url = {https://ocscoes.github.io/presentaciones/CEPAL2022cohesionELSOC.html},
+  abstract = {![](/images/cepal-coes-2022.png) El interés por el estudio de la cohesión social posee una larga trayectoria tanto académica como así también desde el estado y de organizaciones con interés público. La cohesión social aparece como una aspiración normativa de una sociedad mejor, vinculada a conceptos como lazos sociales de calidad, pertenencia, y confianza en los demás y en el estado. Se asume también que un estado de adecuada cohesión social es producto de condiciones estructurales y políticas que apunten a mayor igualdad, integración y oportunidades, por lo cual muchas veces se refiere a ella como un horizonte o una consecuencia de buenas políticas sociales. Sin duda este horizonte normativo reaparece con fuerza en tiempos caracterizados por crisis económica producto de la pandemia, polarización política, y la extrema concentración de ingreso y privilegios que caracteriza las sociedades actuales y donde el caso Chileno claramente no es una excepción. El renovado interés por la cohesión social nos lleva necesariamente a volver sobre su definición, sus alcances y su medición. Si bien existen muchas diferencias en las aproximaciones y definiciones en este tema, en los últimos años surge una convergencia hacia el carácter multidimensional de la cohesión social, que incorpora elementos como relaciones sociales de igualdad, sentido de pertenencia y orientación hacia el bien común. Partiendo desde una definición de cohesión social de la CEPAL (2021), este reporte de investigación presenta inicialmente una propuesta de indicadores de cohesión social basada en la Encuesta Longitudinal Social de Chile - ELSOC 2016-2020, producida por COES. El carácter longitudinal-panel de esta encuesta nos permite realizar posteriormente un análisis de los cambios ocurridos en nueve indicadores de cohesión social en Chile entre los años 2016 y 2020. Finalmente, se presenta una propuesta de tres perfiles de cohesión social en la sociedad chilena así como también su caracterización socioeconómica y regional.},
+  annotation = {\#\# Video de la presentación {$<$}br{$>$} {$<$}iframe width="700"  height="450" src="https://www.youtube.com/embed/CgfAkQ5RWxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$} {$<$}br{$>$} [Documento](https://www.cepal.org/es/publicaciones/47735-cohesion-social-chile-tiempos-cambio-indicadores-perfiles-factores-asociados) {$<$}br{$>$} [Github Repo](https://github.com/ocscoes/cohesion-cepal) {$<$}br{$>$} [Bookdown](https://cohesion-cepal.netlify.app/)}
 }
 
 @misc{castillo_protocolos_2022,
