--- a/content/links/index.Rmd
+++ b/content/links/index.Rmd
@@ -177,6 +177,8 @@ I use software compatible with the principles of open science, this is, free and
 
 **Reporting, workflows & communication**
 
+- [Fallibility in Science: Responding to Errors in the Work of Oneself and Others](https://journals.sagepub.com/doi/10.1177/2515245918776632)
+
 -[Writing a scientific article: A step-by-step guide for beginners](https://www.iium.edu.my/media/74156/B-5%20%20Writing%20a%20Scientific%20Article%20for%20Index%20Journal%20from%20IIUM%20Library..pdf)
 
 - [Business Reports with R Markdown](https://meetup-rmd-style-business-report.netlify.app/?panelset1=previous-css2#1)
@@ -212,7 +214,9 @@ I use software compatible with the principles of open science, this is, free and
 
 ## Search information & literature reviews
 
-- Para partir, [Annual Reviews](https://www.annualreviews.org/) 
+- [Literature review as a research methodology: An overview and guidelines](https://www.sciencedirect.com/science/article/pii/S0148296319304564?ref=pdf_download&fr=RR-2&rr=7247ec74c8a17523)
+
+- Para partir, [Annual Reviews](https://www.annualreviews.org/)
 
 - [https://elicit.org/](https://elicit.org/)
 
