--- a/content/publication/academic-presentations.bib
+++ b/content/publication/academic-presentations.bib
@@ -188,7 +188,23 @@ JC printed pdf}
   address = {Santiago  (Online)},
   url = {https://ocscoes.github.io/presentaciones/CEPAL2022cohesionELSOC.html},
   abstract = {![](/images/cepal-coes-2022.png) El interés por el estudio de la cohesión social posee una larga trayectoria tanto académica como así también desde el estado y de organizaciones con interés público. La cohesión social aparece como una aspiración normativa de una sociedad mejor, vinculada a conceptos como lazos sociales de calidad, pertenencia, y confianza en los demás y en el estado. Se asume también que un estado de adecuada cohesión social es producto de condiciones estructurales y políticas que apunten a mayor igualdad, integración y oportunidades, por lo cual muchas veces se refiere a ella como un horizonte o una consecuencia de buenas políticas sociales. Sin duda este horizonte normativo reaparece con fuerza en tiempos caracterizados por crisis económica producto de la pandemia, polarización política, y la extrema concentración de ingreso y privilegios que caracteriza las sociedades actuales y donde el caso Chileno claramente no es una excepción. El renovado interés por la cohesión social nos lleva necesariamente a volver sobre su definición, sus alcances y su medición. Si bien existen muchas diferencias en las aproximaciones y definiciones en este tema, en los últimos años surge una convergencia hacia el carácter multidimensional de la cohesión social, que incorpora elementos como relaciones sociales de igualdad, sentido de pertenencia y orientación hacia el bien común. Partiendo desde una definición de cohesión social de la CEPAL (2021), este reporte de investigación presenta inicialmente una propuesta de indicadores de cohesión social basada en la Encuesta Longitudinal Social de Chile - ELSOC 2016-2020, producida por COES. El carácter longitudinal-panel de esta encuesta nos permite realizar posteriormente un análisis de los cambios ocurridos en nueve indicadores de cohesión social en Chile entre los años 2016 y 2020. Finalmente, se presenta una propuesta de tres perfiles de cohesión social en la sociedad chilena así como también su caracterización socioeconómica y regional.},
-  annotation = {\#\# Video de la presentación {$<$}br{$>$} {$<$}iframe width="700"  height="450" src="https://www.youtube.com/embed/CgfAkQ5RWxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$} {$<$}br{$>$} [Documento](https://www.cepal.org/es/publicaciones/47735-cohesion-social-chile-tiempos-cambio-indicadores-perfiles-factores-asociados) {$<$}br{$>$} [Github Repo](https://github.com/ocscoes/cohesion-cepal) {$<$}br{$>$} [Bookdown](https://cohesion-cepal.netlify.app/)}
+  annotation = {\#\# Video de la presentación
+
+{$<$}br{$>$}
+
+{$<$}iframe width="700"  height="450" src="https://www.youtube.com/embed/CgfAkQ5RWxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}
+
+{$<$}br{$>$}
+
+[Documento](https://www.cepal.org/es/publicaciones/47735-cohesion-social-chile-tiempos-cambio-indicadores-perfiles-factores-asociados)
+
+{$<$}br{$>$}
+
+[Github Repo](https://github.com/ocscoes/cohesion-cepal)
+
+{$<$}br{$>$}
+
+[Bookdown](https://cohesion-cepal.netlify.app/)}
 }
 
 @misc{castillo_protocolos_2022,
@@ -200,7 +216,9 @@ JC printed pdf}
   address = {Online},
   url = {https://lisa-coes.github.io/presentaciones/tallerRmarkdown-IPOEnero2022/taller-reprod-enero2022.html},
   abstract = {Este curso tiene 2 partes. La primera introduce el lenguaje Markdown y su vinculación con R (RMarkdown) para desarrollar reportes que incluyen tanto texto como análisis de datos en una misma hoja de código. En la segunda parte se presenta un protocolo de análisis reproducible que permite un orden de carpetas de proyecto de manera simple y transparente. Este taller se realiza en el marco de la actividad  Aprendiendo Metodología por Valentina, actividad destinada a colaborar con el financiamiento de un tratarmiento médico de alto costo.},
-  annotation = {{$<$}iframe width="700"  height="450"  src="https://drive.google.com/file/d/1OsRZE-xBPv4T33VcLQvYk7oABf\_\_L-CK/preview" width="640" height="480" allow="autoplay"{$><$}/iframe{$>$} {$<$}iframe width="700"  height="450"  src="https://drive.google.com/file/d/1g98ZMizIBsdyPo5zhRPzNw6QKTq4YYNQ/preview" width="640" height="480" allow="autoplay"{$><$}/iframe{$>$}}
+  annotation = {{$<$}iframe width="700"  height="450"  src="https://drive.google.com/file/d/1OsRZE-xBPv4T33VcLQvYk7oABf\_\_L-CK/preview" width="640" height="480" allow="autoplay"{$><$}/iframe{$>$}
+
+{$<$}iframe width="700"  height="450"  src="https://drive.google.com/file/d/1g98ZMizIBsdyPo5zhRPzNw6QKTq4YYNQ/preview" width="640" height="480" allow="autoplay"{$><$}/iframe{$>$}}
 }
 
 @inproceedings{castillo_social_2012b,
@@ -235,7 +253,11 @@ JC printed pdf}
   address = {Santiago, Facultad de Economía, Universidad de Chile.},
   url = {https://lisa-coes.github.io/presentaciones/tallerenero2022/tallerLISAenero2022.html},
   abstract = {Actualmente, la ciencia vive una crisis de apertura que se ha asociado principalmente a las barreras para acceder a los productos finales de la investigación (artículos), así como también a la transparencia general de los diseños de investigación, levantamiento de datos y análisis de la información. En esta línea, el presente taller entregará una breve introducción general a los orígenes, características y consecuencias del cierre científico, para luego enfocarse en dos herramientas prácticas para la apertura: los pre-registros y los pre-prints. El público objetivo de la actividad son investigadores/as y estudiantes de postgrado en ciencias sociales. Los pre-registros permiten abrir los diseños de investigación en plataformas públicas, comprometiendo hipótesis de investigación antes del análisis y levantamiento de los datos, mientras los pre-prints facilitan el acceso abierto y oportuno a los productos de investigación previo a su publicación en revistas académicas. Dicho taller está a cargo de Juan Carlos Castillo, investigador principal COES y coordinador del Laboratorio de Investigación Social Abierta, quien presentará junto a Julio Iturra, asistente de investigación de la línea Interacciones Grupales e Individuales de COES.},
-  annotation = {\#\# Video de la presentación {$<$}br{$>$} {$<$}iframe width="700"  height="450" src="https://www.youtube.com/embed/RsHmgi6gVH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}}
+  annotation = {\#\# Video de la presentación
+
+{$<$}br{$>$}
+
+{$<$}iframe width="700"  height="450" src="https://www.youtube.com/embed/RsHmgi6gVH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}}
 }
 
 @inproceedings{castillo_what_2009a,
