--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -197,7 +197,15 @@
   url = {https://www.cepal.org/es/publicaciones/47735-cohesion-social-chile-tiempos-cambio-indicadores-perfiles-factores-asociados},
   abstract = {El interés por el estudio de la cohesión social posee una larga trayectoria tanto académica como así también desde el estado y de organizaciones con interés público. La cohesión social aparece como una aspiración normativa de una sociedad mejor, vinculada a conceptos como lazos sociales de calidad, pertenencia, y confianza en los demás y en el estado. Se asume también que un estado de adecuada cohesión social es producto de condiciones estructurales y políticas que apunten a mayor igualdad, integración y oportunidades, por lo cual muchas veces se refiere a ella como un horizonte o una consecuencia de buenas políticas sociales. Sin duda este horizonte normativo reaparece con fuerza en tiempos caracterizados por crisis económica producto de la pandemia, polarización política, y la extrema concentración de ingreso y privilegios que caracteriza las sociedades actuales y donde el caso Chileno claramente no es una excepción. El renovado interés por la cohesión social nos lleva necesariamente a volver sobre su definición, sus alcances y su medición. Si bien existen muchas diferencias en las aproximaciones y definiciones en este tema, en los últimos años surge una convergencia hacia el carácter multidimensional de la cohesión social, que incorpora elementos como relaciones sociales de igualdad, sentido de pertenencia y orientación hacia el bien común. Partiendo desde una definición de cohesión social de la CEPAL (2021), este reporte de investigación presenta inicialmente una propuesta de indicadores de cohesión social basada en la Encuesta Longitudinal Social de Chile - ELSOC 2016-2020, producida por COES. El carácter longitudinal-panel de esta encuesta nos permite realizar posteriormente un análisis de los cambios ocurridos en nueve indicadores de cohesión social en Chile entre los años 2016 y 2020. Finalmente, se presenta una propuesta de tres perfiles de cohesión social en la sociedad chilena así como también su caracterización socioeconómica y regional.},
   keywords = {elsoc,social cohesion},
-  annotation = {[Github Repo](https://github.com/ocscoes/cohesion-cepal) {$<$}br{$>$} [Bookdown](https://cohesion-cepal.netlify.app/) {$<$}br{$>$} [Presentación](https://jc-castillo.com/publication/2022-01-01\_presentacion\_cohesio/)}
+  annotation = {[Github Repo](https://github.com/ocscoes/cohesion-cepal)
+
+{$<$}br{$>$}
+
+[Bookdown](https://cohesion-cepal.netlify.app/)
+
+{$<$}br{$>$}
+
+[Presentación](https://jc-castillo.com/publication/2022-01-01\_presentacion\_cohesio/)}
 }
 
 @techreport{castillo_conceptos_2021a,
@@ -301,7 +309,9 @@
   isbn = {978-956-14-1513-3},
   lccn = {323.60983},
   keywords = {citizenship education,ICCS},
-  annotation = {Proyecto Fondecyt Formación Ciudadana I ![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
+  annotation = {Proyecto Fondecyt Formación Ciudadana I
+
+![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
 }
 
 @article{castillo_dimensiones_2018,
@@ -367,7 +377,9 @@
   abstract = {El presente capítulo busca aportar los estudios de opinión pública sobre los impuestos, exponiendo el cambio de las preferencias y percepciones de los chilenos frente a la tributación progresiva. Desde el marco interpretativo de la economía moral, centrada en las normas culturales, se puede esperar que las opiniones de los ciudadanos frente a los impuestos progresivos se vean asociadas a sus creencias sobre el rol del estado, sus preferencias sobre el acceso igualitario a servicios sociales y sus creencias meritocráticas. Los resultados indican que, si bien las preferencias por impuestos progresivos son mayoritarias, han disminuido desde el año 1999 hasta la fecha, contrastando con un aumento en la crítica a la desigualdad. Se concluye que las diferencias esperables en opiniones sobre los impuestos según nivel socioeconómico, posición política y creencias meritocráticas no poseen asidero en el caso chileno. Más aún, se observa una tendencia al consenso entre distintas posiciones sobre la necesidad de una política tributaria más progresiva.},
   isbn = {978-956-289-241-4},
   keywords = {meritocracy,redistributive preferences},
-  annotation = {![](/images/impuestos-justos.jpg) [Website](https://www.impuestosjustos.io/)}
+  annotation = {![](/images/impuestos-justos.jpg)
+
+[Website](https://www.impuestosjustos.io/)}
 }
 
 @article{castillo_inequality_2012,
@@ -597,7 +609,9 @@
   author = {Castillo, Juan-Carlos and {García-Castro}, Juan Diego and Venegas, Martín},
   year = {2022},
   journal = {International Journal of Social Psychology},
-  volume = {Forthcoming},
+  volume = {37},
+  number = {1},
+  pages = {180--207},
   doi = {10.1080/02134748.2021.2009275},
   url = {https://www.tandfonline.com/doi/full/10.1080/02134748.2021.2009275},
   abstract = {Perceptions of economic inequality have become a topic of growing interest in research from different social science disciplines. This article presents an up-to-date literature review of studies on this topic, stressing aspects related to its conceptualisation and measurement, as well as psychosocial, socioeconomic and contextual factors associated with the perception of inequality. This review ends by pointing out some consequences of perception of inequality and identifying some pathways for future research agendas KEYWORDS perception of economic inequality, measuring the perception of inequality, economic inequality, social status  --- RESUMEN ESPAÑOL: La percepción de desigualdad económica se ha vuelto un tema de creciente interés en investigaciones de distintas disciplinas de las ciencias sociales. El presente artículo presenta una revisión actualizada del estado del arte de los estudios en este tema, destacando aspectos de conceptualización, medición, así como factores psicosociales, socioeconómicos y contextuales vinculados a la percepción de desigualdad. Esta revisión termina señalando algunas consecuencias de la percepción de la desigualdad e identificando algunas vías de desarrollo para agendas de investigación a futuro. PALABRAS CLAVE percepción de desigualdad económica, medición de percepción de desigualdad, desigualdad económica, posición social},
@@ -702,7 +716,9 @@
   isbn = {978-956-14-1513-3},
   lccn = {323.60983},
   keywords = {citizenship education,ICCS},
-  annotation = {Proyecto Fondecyt Formación Ciudadana I ![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
+  annotation = {Proyecto Fondecyt Formación Ciudadana I
+
+![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
 }
 
 @techreport{cox_educacion_2015,
@@ -746,6 +762,7 @@
   author = {Franetovic, Gonzalo and Castillo, Juan-Carlos},
   year = {2022},
   journal = {Frontiers in Sociology},
+  doi = {10.3389/fsoc.2022.806458},
   url = {https://doi.org/10.3389/fsoc.2022.806458},
   abstract = {In a developing and highly unequal region like Latin America, it is crucial to understand the determinants that affect people’s agreement with the redistribution of resources from the state. A series of theories focused on self-interest have continuously established a negative link between people’s income and their support for the reduction of inequalities through redistribution. Despite this, the evidence is scarce and sometimes contradictory while its study in Latin America is almost non-existent. Using data from the LAPOP Survey between 2008 and 2018, a longitudinal dimension is considered for the first time in the measurement of Latin American redistributive preferences, using hybrid multilevel regression models. In contrast to the evidence from studies conducted in other regions, the results reveal that in Latin America it is not possible to detect a clear association between income and redistributive preferences at specific times, but it is possible when changes occur in countries’ levels of inequality and economic development. Likewise, other elements that consistently affect preferences are evident, such as educational level, political ideology, and confidence in the political system. In light of this evidence, comparisons are made with previous research findings in industrialized countries, challenging rationalist theories of justice and solidarity.},
   annotation = {[Github Repo](https://github.com/justicia-distributiva/redist\_lapop)},
@@ -787,6 +804,7 @@
   author = {{García-Sánchez}, Efraín and Castillo, Juan-Carlos and {Rodríguez-Bailón}, Rosa and Willis, Guillermo B.},
   year = {2022},
   journal = {Accepted -  Frontiers in Sociology},
+  doi = {10.3389/fsoc.2022.773378},
   url = {https://doi.org/10.3389/fsoc.2022.773378},
   abstract = {Support for redistribution is crucial for reducing economic inequality. Despite people\&\#39;s desire for reducing extreme inequalities, they still have mixed opinions regarding how to do so. The aim of the article is to examine the underlying latent dimensions of support for redistribution and test its correlates to perceptions of and attitudes toward inequality. In two studies with independent samples from Colombia, we found that support for redistribution can be modelled as a latent construct depicting two different dimensions: one focus on taxing the wealthy and changing the income distribution schema, and other focused on assisting people in need and providing opportunities. We also found that the dimension related to taxing the wealthy (vs. assisting people in need) displayed higher internal reliability and correlated consistently with perceptions and attitudes toward attitudes: the higher the support for taxing the wealthy, the higher the perceptions and concerns of inequality, and the lower the inequality-justifying ideologies. This research unveils an underlying dimension of support for redistribution that shed light on what drives people’s redistributive preferences.}
 }
@@ -860,7 +878,9 @@
   urldate = {2020-06-11},
   abstract = {Este es un reporte/pre-print breve sobre  preferencias redistributivas en Chile en contexto internacional y en el tiempo, utilizando datos como ISSP y LAPOP. Una versión de este reporte fue publicado en CIPER en 2019 en https://www.ciperchile.cl/2019/12/06/la-demanda-por-igualdad-y-los-caminos-que-cuentan-con-amplio-respaldo-ciudadano/ y también en OSF https://osf.io/g4ek8/},
   keywords = {distributive preferences,meritocracy},
-  annotation = {[OSF project](https://osf.io/g4ek8/)  - [Artículo publicado en CIPER enn 2019](https://www.ciperchile.cl/2019/12/06/la-demanda-por-igualdad-y-los-caminos-que-cuentan-con-amplio-respaldo-ciudadano/)  [Github repo](https://github.com/justicia-distributiva/merit-redist-chile2019}
+  annotation = {[OSF project](https://osf.io/g4ek8/)
+
+ - [Artículo publicado en CIPER enn 2019](https://www.ciperchile.cl/2019/12/06/la-demanda-por-igualdad-y-los-caminos-que-cuentan-con-amplio-respaldo-ciudadano/)  [Github repo](https://github.com/justicia-distributiva/merit-redist-chile2019}
 }
 
 @article{maldonado_risk_2019,
@@ -915,7 +935,9 @@
   isbn = {978-956-14-1513-3},
   lccn = {323.60983},
   keywords = {citizenship education,ICCS},
-  annotation = {Proyecto Fondecyt Formación Ciudadana I ![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
+  annotation = {Proyecto Fondecyt Formación Ciudadana I
+
+![https://ediciones.uc.cl/aprendizaje-de-la-ciudadania-contextos-experiencias-y-resultados.html](https://ediciones.uc.cl/media/catalog/product/cache/0762110bdab9bcd70faa57f20c280fd0/a/p/aprendizaje\_de\_la\_ciudadania\_1\_1.png)}
 }
 
 @incollection{miranda_measurement_2018,
@@ -970,7 +992,11 @@
   urldate = {2021-12-15},
   abstract = {Trust in political institutions represents a central component of democratic systems. When citizens lack confidence in state bodies as the government and the parliament, the legitimacy of democracy is dangerously challenged. In the case of Latin America we observe a critical scenario, with a steady decrease of institutional trust in the last decade, accompanied by alarming levels of support for authoritarian regimes. Most of the evidence in this regards refers to adult population, leaving sidelined the young generations who certainly have a stake in the future of democracy in the region. Focusing on the role of the acquisition of civic knowledge at school as a protecting factor of democracy, this research analyzes the role of civic knowledge to understand trust in civic institutions and authoritarian attitudes in eighth-grade students. The data corresponds to the International Civic and Citizenship Education Study (ICCS) 2009 and 2016, in which seven Latin American Countries have participated. The results indicates a puzzling role of civic knowledge, as it diminishes trust in institutions but at the same time reduces authoritarian beliefs, in a similar way in the Latin American countries across time. The consequences for democracy and citizenship education are addressed in the conclusion.},
   isbn = {978-1-108-47775-8},
-  annotation = {![](https://assets.cambridge.org/97811087/45093/cover/9781108745093.jpg) [Github repo](https://github.com/juancarloscastillo/authorit-trust\_iccs-lat) -  [Book Website](https://www.cambridge.org/core/books/psychology-of-democracy/87D5FCF7E4B87CE6E86A875E5ABBB416)},
+  annotation = {![](https://assets.cambridge.org/97811087/45093/cover/9781108745093.jpg)
+
+[Github repo](https://github.com/juancarloscastillo/authorit-trust\_iccs-lat) - 
+
+[Book Website](https://www.cambridge.org/core/books/psychology-of-democracy/87D5FCF7E4B87CE6E86A875E5ABBB416)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/8SQR4JSC/87D5FCF7E4B87CE6E86A875E5ABBB416.html}
 }
 
