cambio butter x meet

--- a/content/contacto/index.Rmd
+++ b/content/contacto/index.Rmd
@@ -4,7 +4,7 @@ title: "Contacto"
 
 ### Horas de reunión
 
-- Inscribirse abajo para horarios de oficina Jueves en la tarde, una vez inscrito no es necesario enviar correo ni confirmar. Las reuniones online son en [Butter](https://app.butter.us/jccastillo/reuniones)
+- Inscribirse abajo para horarios de oficina Jueves en la tarde, una vez inscrito no es necesario enviar correo ni confirmar. Las reuniones online son en [Meet](https://meet.google.com/yan-ghpc-yge) 
 
 
 <!-- Calendly inline widget begin -->
