--- a/content/docencia/index.Rmd
+++ b/content/docencia/index.Rmd
@@ -7,6 +7,7 @@ author: " "
 
 ### 2022
 
+- [Encuestas Sociales: Diseño, Análisis y reporte](https://encuestas-sociales.netlify.app/)
 - [Estadística multivariada](https://multivariada.netlify.app/)
 - [Coloquio investigación en desigualdad y ciudadanía](/post/coloquio/)
 - [Seminarios de grado / memorias / tesis](/post/desarrollo-tesis/)
