--- a/content/publication/academic-presentations.bib
+++ b/content/publication/academic-presentations.bib
@@ -161,6 +161,17 @@ JC printed pdf}
   annotation = {[Github Repo](https://github.com/lisa-coes/presentaciones)}
 }
 
+@misc{castillo_percepciones_2022,
+  type = {Presentación En Seminario: ¿Cuánto Cambiaron Las Percepciones de Desigualdad Tras El Estallido Social?},
+  title = {Percepciones de Desigualdad En Chile},
+  author = {Castillo, Juan-Carlos},
+  year = {2022},
+  month = sep,
+  address = {Centro de Estudios Públicos},
+  url = {/presentations/cep-desigualdad-2022/cep-percdes-2022.html},
+  annotation = {[Github Repo](https://github.com/juancarloscastillo/jc-academic/static/presentations/cep-desigualdad-2022)}
+}
+
 @misc{castillo_perception_2008a,
   title = {Perception and Legitimacy of Income Inequality in International Comparison},
   author = {Castillo, JC and Gerlitz, J. and Schrenker, M.},
