--- a/content/links/index.Rmd
+++ b/content/links/index.Rmd
@@ -85,17 +85,8 @@ I use software compatible with the principles of open science, this is, free and
 
 <br/>
 
-### Following people
 
-- [Kieran Healy](https://kieranhealy.org/)
-
-- [Yihui Xie](https://github.com/yihui)
-
-- [Leslie McCall](https://www.gc.cuny.edu/stonecenter/Leslie-McCall)
-
-<br/>
-
-### Miscellaneous
+### Data analysis
 
 **Data preparation & modeling**
 
@@ -178,7 +169,6 @@ I use software compatible with the principles of open science, this is, free and
 
 - [Practical ggplot](https://wilkelab.org/practicalgg/)
 
-
 **Reporting, workflows & communication**
 
 - [Fallibility in Science: Responding to Errors in the Work of Oneself and Others](https://journals.sagepub.com/doi/10.1177/2515245918776632)
@@ -215,7 +205,6 @@ I use software compatible with the principles of open science, this is, free and
 
 - [Guidelines for quantitative submissions ASR](http://journals.sagepub.com/doi/abs/10.1177/0003122418806282)
 
-
 ## Search information & literature reviews
 
 -[Research Rabbit](https://www.researchrabbit.ai/)
@@ -230,7 +219,24 @@ I use software compatible with the principles of open science, this is, free and
 
 - [Martinovich (2022) Búsqueda Bibliográfica](http://isco.unla.edu.ar/edunla/cuadernos/catalog/view/32/41/126-4)
 
+## Teaching & meetings resources
+
+- [Flinga board](https://flinga.fi/)
+
+- [Menti](https://www.menti.com/)
+
+
+### Following people
+
+- [Kieran Healy](https://kieranhealy.org/)
+
+- [Yihui Xie](https://github.com/yihui)
+
+- [Leslie McCall](https://www.gc.cuny.edu/stonecenter/Leslie-McCall)
+
 
 ## Procrastinación
 
-![https://www.circles.gallery/create](https://www.circles.gallery/create)
+- [Circles](https://www.circles.gallery/create)
+
+- [Sombras](https://sombras.app/)
